--- a/src/main/resources/templates/hitjun.html
+++ b/src/main/resources/templates/hitjun.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Title</title>
 </head>
 <body>
-김보영
-성윤 킴
-최원준2
+    최원준
+    브랜치테스트
 </body>
 </html>
